# aura

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  diagram.mmd
config/: aura.toml
proto/: aura.proto
scripts/: aura.ps1  aura.sh
src/: cfg.rs  cli_server.rs  cmd.rs  compress.rs  context.rs  grpc.rs  lib.rs  main.rs  mcp.rs  pty.rs  rag.rs  server.rs
src/aura/: cli_client.rs  help.rs  main.rs
src/ingest/: mod.rs
src/tools/: mod.rs  status.rs
tests/: grpc_status_integration.rs  mcp_uds_status.rs
