[package]
name = "aura"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-pty = "0.9"
anyhow = "1.0"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
termwiz = "0.23"
atty = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
tonic = { version = "0.8", features = ["transport"] }
prost = "0.11"
tonic-build = "0.8"
tokio-stream = { version = "0.1", features = ["net"] }
rig = { package = "rig-core", version = "0.36" }
rig-sqlite = "0.2"
sqlite-vec = "0.1"
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
once_cell = "1.20"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "aura-cli"
path = "src/aura/cli_client.rs"

[[bin]]
name = "aura"
path = "src/aura/main.rs"
