[package]
name = "aura"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-pty = "0.9"
anyhow = "1.0"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
termwiz = "0.23"
atty = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
rig = { package = "rig-core", version = "0.36" }

[dev-dependencies]
tempfile = "3"

 # binaries moved to `src/bin/`; Cargo auto-discovers them
